tests/golden/errors/unknown_name.stderr
error[name]: unknown name `mystery`
  --> unknown_name.kso:1:16
   1 | main = print "{mystery}"
                      ^
